*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.8.2

* Topic property change emails didn't have the "References" and
  "In-Reply-To" mail headers set correctly, so that those emails
  weren't grouped into the same "topic" email thread.

* The view topic display has been improved for diffs which contain new
  files.  Now the entire width of the screen is used when displaying
  new files.  Fix from Jason Remilliard and Kannan Goundan.

* The email taint/input checking code has been tightened, from Jason
  Remilliard.

* Improved the input checking code on the topic properties page.

Version 1.8.1

* Modified the filename field in the topicfile table back to 255
  characters instead of 1024 so that MySQL doesn't complain.

* Added some missing imports which caused compilation errors for
  Perl 5.8.3 on Solaris when checksetup.pl was run.

* Made checksetup.pl more graceful when DBI.pm is not installed, and
  it is checking what other database modules are required.

* Fixed bug found by Philipp Frauenfelder where LXR integration was
  not working when the LXR database was password protected.

The following changes were from Jason Remillard:

* Fixed bug in the metric support has been fixed, which prevented the
  metric data from being usable if more than one reviewer was present.

* Fixed bug where the wrong Codestriker time number was reported in
  the metric summary page.

* Emails sent from topic property changes now include more information
  such as what specific properties were changes.  Topic creation
  emails also include the list of files which have been changed.

Version 1.8.0

* Initial support for Perforce integration.  Can handle topic text
  from a Perforce describe command, such as:
  "p4 describe -du <changenumber>" or "p4 diff -du".

* Codestriker now works under IIS as well as Apache.  Use IPC::Open3